[gd_scene load_steps=28 format=3 uid="uid://lefoi2dhtlfc"]

[ext_resource type="Script" path="res://scripts/WorldScripts/world_3.gd" id="1_3okja"]
[ext_resource type="TileSet" uid="uid://dbcekwogp6tu4" path="res://Tilseset1.tres" id="2_xig3k"]
[ext_resource type="Shader" path="res://thermal.gdshader" id="3_xpb27"]
[ext_resource type="PackedScene" uid="uid://bkua0s8hor0i0" path="res://scenes/upgrade_station.tscn" id="4_ah3sb"]
[ext_resource type="PackedScene" uid="uid://fbvrsjqpv48e" path="res://scenes/Player.tscn" id="4_dmlg2"]
[ext_resource type="Texture2D" uid="uid://qitpvvu66w1" path="res://asansor.png" id="5_5wp83"]
[ext_resource type="PackedScene" uid="uid://b6jc6rqa5yav7" path="res://scenes/ackapa.tscn" id="6_63471"]
[ext_resource type="PackedScene" uid="uid://bl1i20vwjfqms" path="res://NPCs/MiniBoss1.tscn" id="6_oxajl"]
[ext_resource type="Texture2D" uid="uid://cotvulxyq83nm" path="res://sprites/gozparca.png" id="7_qrdl2"]
[ext_resource type="Script" path="res://Camera2D.gd" id="8_gbpmh"]
[ext_resource type="Script" path="res://scripts/eyegain.gd" id="9_ywfwi"]
[ext_resource type="Shader" uid="uid://s7s30mt8g442" path="res://scenes/Player.tres" id="11_irsu6"]
[ext_resource type="PackedScene" uid="uid://dbbsw3u3qfvod" path="res://scenes/door.tscn" id="12_vxmuu"]
[ext_resource type="PackedScene" uid="uid://b8k7fady4vvuw" path="res://scenes/floresan.tscn" id="13_kpi1x"]
[ext_resource type="Environment" uid="uid://cfimef8lfv0p4" path="res://scenes/Worlds/glow.tres" id="14_sn1jc"]
[ext_resource type="PackedScene" uid="uid://ck1qqt2h66flu" path="res://scenes/a_iworld.tscn" id="15_s4uaj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b2hur"]
shader = ExtResource("3_xpb27")
shader_parameter/size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbch1"]
size = Vector2(111, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qq8h8"]
size = Vector2(110.5, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6jaw"]
size = Vector2(109, 7)

[sub_resource type="Animation" id="Animation_vkc18"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(269, 256)]
}

[sub_resource type="Animation" id="Animation_psjoq"]
resource_name = "platform"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Platform:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2128, 1192), Vector2(272, 125)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o37dm"]
_data = {
"RESET": SubResource("Animation_vkc18"),
"platform": SubResource("Animation_psjoq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d7rcx"]
resource_local_to_scene = true
shader = ExtResource("11_irsu6")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.996945, 6e-06, 2e-06, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypusj"]
size = Vector2(108, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lyng"]
size = Vector2(15, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0s44"]
size = Vector2(20, 91)

[node name="World3" type="Node2D"]
script = ExtResource("1_3okja")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("8_gbpmh")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_xig3k")
format = 2
layer_0/tile_data = PackedInt32Array(131101, 65536, 4, 29, 65536, 2, 131100, 65536, 4, 65564, 65536, 3, 28, 65536, 2, 131099, 65536, 4, 65563, 65536, 3, 27, 65536, 2, 26, 65536, 2, 25, 65536, 2, 24, 65536, 2, 23, 65536, 2, 22, 65536, 2, 21, 65536, 2, 20, 65536, 2, 19, 65536, 2, 131090, 65536, 4, 65554, 65536, 3, 18, 65536, 2, 131089, 65536, 4, 65553, 65536, 3, 17, 65536, 2, 131088, 65536, 4, 65552, 65536, 3, 16, 65536, 2, 131087, 65536, 4, 65551, 65536, 3, 15, 65536, 2, 131086, 65536, 4, 65550, 65536, 3, 14, 65536, 2, 131085, 65536, 4, 65549, 65536, 3, 13, 65536, 2, 131084, 65536, 4, 65548, 65536, 3, 12, 65536, 2, 131083, 65536, 4, 65547, 65536, 3, 11, 65536, 2, 131082, 65536, 4, 65546, 65536, 3, 10, 65536, 2, 131081, 65536, 4, 65545, 65536, 3, 9, 65536, 2, 131080, 65536, 4, 65544, 65536, 3, 8, 65536, 2, 131079, 65536, 4, 65543, 65536, 3, 7, 65536, 2, 131078, 65536, 4, 65542, 65536, 3, 6, 65536, 2, 131077, 65536, 4, 65541, 65536, 3, 5, 65536, 2, 131076, 65536, 4, 65540, 65536, 3, 4, 65536, 2, 131075, 65536, 4, 65539, 65536, 3, 3, 65536, 2, 131074, 65536, 3, 65538, 65536, 3, 2, 65536, 2, 131073, 65536, 3, 65537, 65536, 3, 1, 65536, 2, 131072, 0, 3, 65536, 0, 3, 0, 0, 2, 1048578, 65536, 4, 983042, 65536, 3, 917506, 65536, 3, 851970, 0, 1, 786434, 0, 1, 720898, 0, 1, 655362, 0, 1, 589826, 0, 1, 524290, 131072, 3, 458754, 131072, 3, 393218, 131072, 3, 327682, 131072, 3, 262146, 131072, 3, 196610, 131072, 3, 1048577, 65536, 4, 983041, 65536, 3, 917505, 65536, 3, 851969, 0, 1, 786433, 0, 1, 720897, 0, 1, 655361, 0, 1, 589825, 0, 1, 524289, 65536, 3, 458753, 65536, 3, 393217, 65536, 3, 327681, 65536, 3, 262145, 65536, 3, 196609, 65536, 3, 1048576, 0, 4, 983040, 0, 3, 917504, 65536, 2, 851968, 0, 1, 786432, 0, 1, 720896, 0, 1, 655360, 0, 1, 589824, 0, 1, 524288, 65536, 3, 458752, 65536, 3, 393216, 0, 3, 327680, 0, 3, 262144, 0, 3, 196608, 0, 3, 1048605, 65536, 3, 983069, 65536, 3, 917533, 65536, 2, 1048604, 65536, 3, 983068, 65536, 3, 917532, 65536, 2, 1048603, 65536, 3, 983067, 65536, 3, 917531, 65536, 2, 1048602, 65536, 3, 983066, 65536, 3, 917530, 65536, 2, 1048601, 65536, 4, 983065, 65536, 3, 917529, 65536, 2, 1048600, 65536, 4, 983064, 65536, 3, 917528, 65536, 2, 1048599, 65536, 4, 983063, 65536, 3, 917527, 65536, 2, 1048598, 65536, 4, 983062, 65536, 3, 917526, 65536, 2, 1048597, 65536, 4, 983061, 65536, 3, 917525, 65536, 2, 1048596, 65536, 4, 983060, 65536, 3, 917524, 65536, 2, 1048595, 65536, 4, 983059, 65536, 3, 1048594, 65536, 4, 983058, 65536, 3, 1048593, 65536, 4, 983057, 65536, 3, 917521, 65536, 2, 1048592, 65536, 4, 983056, 65536, 3, 917520, 65536, 2, 1048591, 65536, 4, 983055, 65536, 3, 917519, 65536, 2, 1048590, 65536, 4, 983054, 65536, 3, 917518, 65536, 2, 1048589, 65536, 4, 983053, 65536, 3, 917517, 65536, 2, 1048588, 65536, 4, 983052, 65536, 3, 917516, 65536, 2, 1048587, 65536, 4, 983051, 65536, 3, 917515, 65536, 2, 1048586, 65536, 4, 983050, 65536, 3, 917514, 65536, 2, 1048585, 65536, 4, 983049, 65536, 3, 917513, 65536, 2, 1048584, 65536, 4, 983048, 65536, 3, 917512, 65536, 2, 1048583, 65536, 4, 983047, 65536, 3, 917511, 65536, 2, 1048582, 65536, 4, 983046, 65536, 3, 917510, 65536, 2, 1048581, 65536, 4, 983045, 65536, 3, 917509, 65536, 2, 1048580, 65536, 4, 983044, 65536, 3, 917508, 65536, 2, 1048579, 65536, 4, 983043, 65536, 3, 917507, 65536, 2, 131098, 65536, 4, 65562, 65536, 3, 131097, 65536, 4, 65561, 65536, 3, 131096, 65536, 4, 65560, 65536, 3, 131095, 65536, 4, 65559, 65536, 3, 131094, 65536, 4, 65558, 65536, 3, 131093, 65536, 4, 65557, 65536, 3, 131092, 65536, 4, 65556, 65536, 3, 131091, 65536, 4, 65555, 65536, 3, 917523, 65536, 2, 917522, 65536, 2, 65565, 65536, 3, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 589827, 0, 1, 655363, 0, 1, 720899, 0, 1, 786435, 0, 1, 851971, 0, 1, 196612, 0, 1, 262148, 0, 1, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 589828, 0, 1, 655364, 0, 1, 720900, 0, 1, 786436, 0, 1, 851972, 0, 1, 196613, 0, 1, 262149, 0, 1, 327685, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 589829, 0, 1, 655365, 0, 1, 720901, 0, 1, 786437, 0, 1, 851973, 0, 1, 196614, 0, 1, 262150, 0, 1, 327686, 0, 1, 393222, 0, 1, 458758, 0, 1, 524294, 0, 1, 589830, 0, 1, 655366, 0, 1, 720902, 0, 1, 786438, 0, 1, 851974, 0, 1, 196615, 0, 1, 262151, 0, 1, 327687, 0, 1, 393223, 0, 1, 458759, 0, 1, 524295, 0, 1, 589831, 0, 1, 655367, 0, 1, 720903, 0, 1, 786439, 0, 1, 851975, 0, 1, 196616, 0, 1, 262152, 0, 1, 327688, 0, 1, 393224, 0, 1, 458760, 0, 1, 524296, 0, 1, 589832, 0, 1, 655368, 0, 1, 720904, 0, 1, 786440, 0, 1, 851976, 0, 1, 196617, 0, 1, 262153, 0, 1, 327689, 0, 1, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 589833, 0, 1, 655369, 0, 1, 720905, 0, 1, 786441, 0, 1, 851977, 0, 1, 196618, 0, 1, 262154, 0, 1, 327690, 0, 1, 393226, 0, 1, 458762, 0, 1, 524298, 0, 1, 589834, 0, 1, 655370, 0, 1, 720906, 0, 1, 786442, 0, 1, 851978, 0, 1, 196619, 0, 1, 262155, 0, 1, 327691, 0, 1, 393227, 0, 1, 458763, 0, 1, 524299, 0, 1, 589835, 0, 1, 655371, 0, 1, 720907, 0, 1, 786443, 0, 1, 851979, 0, 1, 196620, 0, 1, 262156, 0, 1, 327692, 0, 1, 393228, 0, 1, 458764, 0, 1, 524300, 0, 1, 589836, 0, 1, 655372, 0, 1, 720908, 0, 1, 786444, 0, 1, 851980, 0, 1, 196621, 0, 1, 262157, 0, 1, 327693, 0, 1, 393229, 0, 1, 458765, 0, 1, 524301, 0, 1, 589837, 0, 1, 655373, 0, 1, 720909, 0, 1, 786445, 0, 1, 851981, 0, 1, 196622, 0, 1, 262158, 0, 1, 327694, 0, 1, 393230, 0, 1, 458766, 0, 1, 524302, 0, 1, 589838, 0, 1, 655374, 0, 1, 720910, 0, 1, 786446, 0, 1, 196623, 0, 1, 262159, 0, 1, 393231, 327680, 1, 458767, 327680, 1, 524303, 327680, 1, 589839, 327680, 1, 655375, 327680, 1, 720911, 327680, 1, 786447, 327680, 1, 851983, 327680, 2, 196624, 0, 1, 262160, 0, 1, 327696, 0, 1, 393232, 0, 1, 458768, 0, 1, 524304, 0, 1, 589840, 0, 1, 655376, 0, 1, 720912, 0, 1, 786448, 0, 1, 851984, 0, 1, 196625, 0, 1, 262161, 0, 1, 327697, 0, 1, 393233, 0, 1, 458769, 0, 1, 524305, 0, 1, 589841, 0, 1, 655377, 0, 1, 720913, 0, 1, 786449, 0, 1, 851985, 0, 1, 196626, 0, 1, 262162, 0, 1, 327698, 0, 1, 393234, 0, 1, 458770, 0, 1, 524306, 0, 1, 589842, 0, 1, 655378, 0, 1, 720914, 0, 1, 786450, 0, 1, 851986, 0, 1, 196627, 0, 1, 262163, 0, 1, 327699, 0, 1, 393235, 0, 1, 458771, 0, 1, 524307, 0, 1, 589843, 0, 1, 655379, 0, 1, 720915, 0, 1, 786451, 0, 1, 851987, 0, 1, 196628, 0, 1, 262164, 0, 1, 327700, 0, 1, 393236, 0, 1, 458772, 0, 1, 524308, 0, 1, 589844, 0, 1, 655380, 0, 1, 720916, 0, 1, 786452, 0, 1, 851988, 0, 1, 196629, 0, 1, 262165, 0, 1, 327701, 0, 1, 393237, 0, 1, 458773, 0, 1, 524309, 0, 1, 589845, 0, 1, 655381, 0, 1, 720917, 0, 1, 786453, 0, 1, 851989, 0, 1, 196630, 0, 1, 262166, 0, 1, 327702, 0, 1, 393238, 0, 1, 458774, 0, 1, 524310, 0, 1, 589846, 0, 1, 655382, 0, 1, 720918, 0, 1, 786454, 0, 1, 851990, 0, 1, 196631, 0, 1, 262167, 0, 1, 327703, 0, 1, 393239, 0, 1, 458775, 0, 1, 524311, 0, 1, 589847, 0, 1, 655383, 0, 1, 720919, 0, 1, 786455, 0, 1, 851991, 0, 1, 196632, 0, 1, 262168, 0, 1, 327704, 0, 1, 393240, 0, 1, 458776, 0, 1, 524312, 0, 1, 589848, 0, 1, 655384, 0, 1, 720920, 0, 1, 786456, 0, 1, 851992, 0, 1, 196633, 0, 1, 262169, 0, 1, 327705, 0, 1, 393241, 0, 1, 458777, 0, 1, 524313, 0, 1, 589849, 0, 1, 655385, 0, 1, 720921, 0, 1, 786457, 0, 1, 851993, 0, 1, 196634, 0, 1, 262170, 0, 1, 327706, 0, 1, 393242, 0, 1, 458778, 0, 1, 524314, 0, 1, 589850, 0, 1, 655386, 0, 1, 720922, 0, 1, 786458, 0, 1, 851994, 0, 1, 917503, 131072, 3, 851967, 131072, 3, 786431, 131072, 3, 720895, 131072, 3, 655359, 131072, 3, 589823, 0, 3, 524287, 0, 2, 983039, 0, 4, 196635, 0, 1, 262171, 0, 1, 327707, 0, 1, 393243, 0, 1, 458779, 0, 1, 524315, 0, 1, 589851, 0, 1, 655387, 0, 1, 720923, 0, 1, 786459, 0, 1, 851995, 0, 1, 196636, 0, 1, 262172, 0, 1, 327708, 0, 1, 393244, 0, 1, 458780, 0, 1, 524316, 0, 1, 589852, 0, 1, 655388, 0, 1, 720924, 0, 1, 786460, 0, 1, 851996, 0, 1, 655389, 0, 1, 720925, 0, 1, 786461, 0, 1, 851997, 0, 1, 30, 65536, 2, 65566, 65536, 3, 131102, 65536, 3, 655390, 0, 1, 720926, 0, 1, 786462, 0, 1, 851998, 0, 1, 917534, 65536, 2, 983070, 65536, 3, 1048606, 65536, 3, 31, 65536, 2, 65567, 65536, 3, 131103, 65536, 3, 655391, 0, 1, 720927, 0, 1, 786463, 0, 1, 851999, 0, 1, 917535, 65536, 2, 983071, 65536, 3, 1048607, 65536, 4, 32, 65536, 2, 65568, 65536, 3, 131104, 65536, 3, 655392, 0, 1, 720928, 0, 1, 786464, 0, 1, 852000, 0, 1, 917536, 65536, 2, 983072, 65536, 3, 1048608, 65536, 4, 33, 65536, 2, 65569, 65536, 3, 131105, 65536, 4, 655393, 0, 1, 720929, 0, 1, 786465, 0, 1, 852001, 0, 1, 917537, 65536, 2, 983073, 65536, 3, 1048609, 65536, 4, 34, 65536, 2, 65570, 65536, 3, 131106, 65536, 4, 196642, 0, 1, 262178, 0, 1, 327714, 196608, 1, 393250, 0, 1, 458786, 0, 1, 524322, 0, 1, 589858, 0, 1, 655394, 0, 1, 720930, 0, 1, 786466, 0, 1, 852002, 0, 1, 917538, 65536, 2, 983074, 65536, 3, 1048610, 65536, 4, 35, 65536, 2, 65571, 65536, 3, 131107, 65536, 4, 196643, 0, 1, 262179, 0, 1, 327715, 196608, 1, 393251, 0, 1, 458787, 0, 1, 524323, 0, 1, 589859, 0, 1, 655395, 0, 1, 720931, 0, 1, 786467, 0, 1, 852003, 0, 1, 917539, 65536, 2, 983075, 65536, 3, 1048611, 65536, 4, 36, 65536, 2, 65572, 65536, 3, 131108, 65536, 4, 196644, 0, 1, 262180, 0, 1, 327716, 196608, 1, 393252, 0, 1, 458788, 0, 1, 524324, 0, 1, 589860, 0, 1, 655396, 0, 1, 720932, 0, 1, 786468, 0, 1, 852004, 0, 1, 917540, 65536, 2, 983076, 65536, 3, 1048612, 65536, 4, 37, 65536, 2, 65573, 65536, 3, 131109, 65536, 4, 196645, 0, 1, 262181, 0, 1, 327717, 196608, 1, 393253, 0, 1, 458789, 0, 1, 524325, 0, 1, 589861, 0, 1, 655397, 0, 1, 720933, 0, 1, 786469, 0, 1, 852005, 0, 1, 917541, 65536, 2, 983077, 65536, 3, 1048613, 65536, 4, 38, 65536, 2, 65574, 65536, 3, 131110, 65536, 4, 196646, 0, 1, 262182, 0, 1, 327718, 196608, 1, 393254, 0, 1, 458790, 0, 1, 524326, 0, 1, 589862, 0, 1, 655398, 0, 1, 720934, 0, 1, 786470, 0, 1, 852006, 0, 1, 917542, 65536, 2, 983078, 65536, 3, 1048614, 65536, 4, 39, 65536, 2, 65575, 65536, 3, 131111, 65536, 4, 196647, 0, 1, 262183, 0, 1, 327719, 196608, 1, 393255, 0, 1, 458791, 0, 1, 524327, 0, 1, 589863, 0, 1, 655399, 0, 1, 720935, 0, 1, 786471, 0, 1, 852007, 0, 1, 917543, 65536, 2, 983079, 65536, 3, 1048615, 65536, 4, 40, 65536, 2, 65576, 65536, 3, 131112, 65536, 4, 196648, 0, 1, 262184, 0, 1, 327720, 196608, 1, 393256, 0, 1, 458792, 0, 1, 524328, 0, 1, 589864, 0, 1, 655400, 0, 1, 720936, 0, 1, 786472, 0, 1, 852008, 0, 1, 917544, 65536, 2, 983080, 65536, 3, 1048616, 65536, 4, 41, 65536, 2, 65577, 65536, 3, 131113, 65536, 4, 196649, 0, 1, 262185, 0, 1, 327721, 196608, 1, 393257, 0, 1, 458793, 0, 1, 524329, 0, 1, 589865, 0, 1, 655401, 0, 1, 720937, 0, 1, 786473, 0, 1, 852009, 0, 1, 917545, 65536, 2, 983081, 65536, 3, 1048617, 65536, 4, 42, 65536, 2, 65578, 65536, 3, 131114, 65536, 4, 196650, 0, 1, 262186, 0, 1, 327722, 196608, 1, 393258, 0, 1, 458794, 0, 1, 524330, 0, 1, 589866, 0, 1, 655402, 0, 1, 720938, 0, 1, 786474, 0, 1, 852010, 0, 1, 917546, 65536, 2, 983082, 65536, 3, 1048618, 65536, 4, 43, 65536, 2, 65579, 65536, 3, 131115, 65536, 4, 196651, 0, 1, 262187, 0, 1, 327723, 196608, 1, 393259, 0, 1, 458795, 0, 1, 524331, 0, 1, 589867, 0, 1, 655403, 0, 1, 720939, 0, 1, 786475, 0, 1, 852011, 0, 1, 917547, 65536, 2, 983083, 65536, 3, 1048619, 65536, 4, 44, 65536, 2, 65580, 65536, 3, 131116, 65536, 4, 196652, 0, 1, 262188, 0, 1, 327724, 196608, 1, 393260, 0, 1, 458796, 0, 1, 524332, 0, 1, 589868, 0, 1, 655404, 0, 1, 720940, 0, 1, 786476, 0, 1, 852012, 0, 1, 917548, 65536, 2, 983084, 65536, 3, 1048620, 65536, 4, 45, 65536, 2, 65581, 65536, 3, 131117, 65536, 4, 196653, 0, 1, 262189, 0, 1, 327725, 196608, 1, 393261, 0, 1, 458797, 0, 1, 524333, 0, 1, 589869, 0, 1, 655405, 0, 1, 720941, 0, 1, 786477, 0, 1, 852013, 0, 1, 917549, 65536, 2, 983085, 65536, 3, 1048621, 65536, 4, 46, 65536, 2, 65582, 65536, 3, 131118, 65536, 4, 196654, 0, 1, 262190, 0, 1, 327726, 196608, 1, 393262, 0, 1, 458798, 0, 1, 524334, 0, 1, 589870, 0, 1, 655406, 0, 1, 720942, 0, 1, 786478, 0, 1, 852014, 0, 1, 917550, 65536, 2, 983086, 65536, 3, 1048622, 65536, 4, 47, 65536, 2, 65583, 65536, 3, 131119, 65536, 4, 196655, 0, 1, 262191, 0, 1, 327727, 196608, 1, 393263, 0, 1, 458799, 0, 1, 524335, 0, 1, 589871, 0, 1, 655407, 0, 1, 720943, 0, 1, 786479, 0, 1, 852015, 0, 1, 917551, 65536, 2, 983087, 65536, 3, 1048623, 65536, 4, 48, 65536, 2, 65584, 65536, 3, 131120, 65536, 4, 196656, 0, 1, 262192, 0, 1, 327728, 196608, 1, 393264, 0, 1, 458800, 0, 1, 524336, 0, 1, 589872, 0, 1, 655408, 0, 1, 720944, 0, 1, 786480, 0, 1, 852016, 0, 1, 917552, 65536, 2, 983088, 65536, 3, 1048624, 65536, 4, 49, 65536, 2, 65585, 65536, 3, 131121, 65536, 4, 196657, 0, 1, 262193, 0, 1, 327729, 196608, 1, 393265, 0, 1, 458801, 0, 1, 524337, 0, 1, 589873, 0, 1, 655409, 0, 1, 720945, 0, 1, 786481, 0, 1, 852017, 0, 1, 917553, 65536, 2, 983089, 65536, 3, 1048625, 65536, 4, 50, 65536, 2, 65586, 65536, 3, 131122, 65536, 4, 196658, 0, 1, 262194, 0, 1, 327730, 196608, 1, 393266, 0, 1, 458802, 0, 1, 524338, 0, 1, 589874, 0, 1, 655410, 0, 1, 720946, 0, 1, 786482, 0, 1, 852018, 0, 1, 917554, 65536, 2, 983090, 65536, 3, 1048626, 65536, 4, 51, 65536, 2, 65587, 65536, 3, 131123, 65536, 4, 196659, 0, 1, 262195, 0, 1, 327731, 196608, 1, 393267, 0, 1, 458803, 0, 1, 524339, 0, 1, 589875, 0, 1, 655411, 0, 1, 720947, 0, 1, 786483, 0, 1, 852019, 0, 1, 917555, 65536, 2, 983091, 65536, 3, 1048627, 65536, 4, 52, 65536, 2, 65588, 65536, 3, 131124, 65536, 4, 196660, 0, 1, 262196, 0, 1, 327732, 196608, 1, 393268, 0, 1, 458804, 0, 1, 524340, 0, 1, 589876, 0, 1, 655412, 0, 1, 720948, 0, 1, 786484, 0, 1, 852020, 0, 1, 917556, 65536, 2, 983092, 65536, 3, 1048628, 65536, 4, 53, 65536, 2, 65589, 65536, 3, 131125, 65536, 4, 196661, 0, 1, 262197, 0, 1, 327733, 196608, 1, 393269, 0, 1, 458805, 0, 1, 524341, 0, 1, 589877, 0, 1, 655413, 0, 1, 720949, 0, 1, 786485, 0, 1, 852021, 0, 1, 917557, 65536, 2, 983093, 65536, 3, 1048629, 65536, 4, 54, 65536, 2, 65590, 65536, 3, 131126, 65536, 4, 196662, 0, 1, 262198, 0, 1, 327734, 196608, 1, 393270, 0, 1, 458806, 0, 1, 524342, 0, 1, 589878, 0, 1, 655414, 0, 1, 720950, 0, 1, 786486, 0, 1, 852022, 0, 1, 917558, 65536, 2, 983094, 65536, 3, 1048630, 65536, 4, 55, 65536, 2, 65591, 65536, 3, 131127, 65536, 4, 196663, 0, 1, 262199, 0, 1, 327735, 196608, 1, 393271, 0, 1, 458807, 0, 1, 524343, 0, 1, 589879, 0, 1, 655415, 0, 1, 720951, 0, 1, 786487, 0, 1, 852023, 0, 1, 917559, 65536, 2, 983095, 65536, 3, 1048631, 65536, 4, 56, 65536, 2, 65592, 65536, 3, 131128, 65536, 4, 196664, 0, 1, 262200, 0, 1, 327736, 196608, 1, 393272, 0, 1, 458808, 0, 1, 524344, 0, 1, 589880, 0, 1, 655416, 0, 1, 720952, 0, 1, 786488, 0, 1, 852024, 0, 1, 917560, 65536, 2, 983096, 65536, 3, 1048632, 65536, 4, 57, 65536, 2, 65593, 65536, 3, 131129, 65536, 3, 196665, 0, 3, 262201, 0, 3, 327737, 0, 3, 393273, 0, 3, 458809, 0, 3, 524345, 0, 4, 589881, 0, 1, 655417, 0, 1, 720953, 0, 1, 786489, 0, 1, 852025, 0, 1, 917561, 65536, 2, 983097, 65536, 3, 1048633, 65536, 4, 58, 65536, 2, 65594, 65536, 3, 131130, 65536, 3, 196666, 65536, 3, 262202, 65536, 3, 327738, 65536, 3, 393274, 65536, 3, 458810, 65536, 3, 524346, 65536, 4, 589882, 0, 1, 655418, 0, 1, 720954, 0, 1, 786490, 0, 1, 852026, 0, 1, 917562, 65536, 2, 983098, 65536, 3, 1048634, 65536, 4, 59, 131072, 2, 65595, 131072, 3, 131131, 131072, 3, 196667, 131072, 3, 262203, 131072, 3, 327739, 131072, 3, 393275, 131072, 3, 458811, 131072, 3, 524347, 65536, 4, 589883, 0, 1, 655419, 0, 1, 720955, 0, 1, 786491, 0, 1, 852027, 0, 1, 917563, 65536, 2, 983099, 131072, 3, 1048635, 131072, 4, 196637, 0, 1, 262173, 0, 1, 327709, 0, 1, 393245, 0, 1, 458781, 0, 1, 524317, 0, 1, 589853, 0, 1, 196638, 0, 1, 262174, 0, 1, 327710, 0, 1, 393246, 0, 1, 458782, 0, 1, 524318, 0, 1, 589854, 0, 1, 196639, 0, 1, 262175, 0, 1, 327711, 0, 1, 393247, 0, 1, 458783, 0, 1, 524319, 0, 1, 589855, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, 458784, 0, 1, 524320, 0, 1, 589856, 0, 1, 196641, 65536, 1, 262177, 65536, 1, 327713, 196608, 2, 393249, 0, 1, 458785, 0, 1, 524321, 0, 1, 589857, 0, 1, 851982, 0, 1, 327695, 327680, 0, 917564, 65536, 4, 524348, 65536, 2, 917566, 131072, 4, 917565, 65536, 4, 852030, 131072, 3, 786494, 131072, 3, 720958, 131072, 3, 655422, 131072, 3, 589886, 131072, 3, 524350, 131072, 2, 524349, 65536, 4)

[node name="Player" parent="." instance=ExtResource("4_dmlg2")]
position = Vector2(15, 218)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = -46.0
offset_right = 563.0
offset_bottom = 291.0
color = Color(0, 0, 0, 0.588235)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_b2hur")
offset_left = -21.0
offset_top = -10.0
offset_right = 513.0
offset_bottom = 295.0

[node name="UpgradeStation" parent="CanvasLayer" instance=ExtResource("4_ah3sb")]
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
metadata/_edit_use_anchors_ = true

[node name="AIworld" parent="CanvasLayer" instance=ExtResource("15_s4uaj")]

[node name="ackapa" parent="CanvasLayer" instance=ExtResource("6_63471")]

[node name="Platform" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(269, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(-24.5, -24.5)
shape = SubResource("RectangleShape2D_rbch1")

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
texture_filter = 1
position = Vector2(-24.5, -28)
texture = ExtResource("5_5wp83")

[node name="platformdetect" type="Area2D" parent="Platform"]
position = Vector2(-18, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/platformdetect"]
position = Vector2(-7, 24.5)
shape = SubResource("RectangleShape2D_qq8h8")

[node name="Squish2" type="Area2D" parent="Platform"]
position = Vector2(-20, 13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Squish2"]
position = Vector2(-4.5, -31.888)
shape = SubResource("RectangleShape2D_q6jaw")

[node name="Platformanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o37dm")
}

[node name="MiniBoss1" parent="." instance=ExtResource("6_oxajl")]
material = SubResource("ShaderMaterial_d7rcx")
position = Vector2(923, 201)

[node name="Squish1" type="Area2D" parent="."]
position = Vector2(247, 231)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Squish1"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_ypusj")

[node name="eyegain" type="Area2D" parent="."]
position = Vector2(675, 448)
script = ExtResource("9_ywfwi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="eyegain"]
position = Vector2(2.5, -2)
shape = SubResource("RectangleShape2D_5lyng")

[node name="Sprite2D" type="Sprite2D" parent="eyegain"]
texture_filter = 1
position = Vector2(4, 0)
texture = ExtResource("7_qrdl2")

[node name="Nextworld" type="Area2D" parent="."]
position = Vector2(988, 186)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nextworld"]
position = Vector2(4, 1.5)
shape = SubResource("RectangleShape2D_m0s44")

[node name="Door" parent="." instance=ExtResource("12_vxmuu")]
position = Vector2(963, 224)
scale = Vector2(2, 2)

[node name="Floresan" parent="." instance=ExtResource("13_kpi1x")]
position = Vector2(190, 51)

[node name="Floresan2" parent="." instance=ExtResource("13_kpi1x")]
position = Vector2(440, 51)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("14_sn1jc")

[connection signal="deadsignal" from="Player" to="." method="_on_player_deadsignal"]
[connection signal="area_entered" from="Platform/platformdetect" to="." method="_on_platformdetect_area_entered"]
[connection signal="area_exited" from="Platform/platformdetect" to="." method="_on_platformdetect_area_exited"]
[connection signal="area_entered" from="Platform/Squish2" to="." method="_on_squish_2_area_entered"]
[connection signal="body_entered" from="Platform/Squish2" to="." method="_on_squish_2_body_entered"]
[connection signal="bossdead" from="MiniBoss1" to="." method="_on_mini_boss_1_bossdead"]
[connection signal="body_entered" from="Squish1" to="." method="_on_squish_1_body_entered"]
[connection signal="area_entered" from="eyegain" to="." method="_on_eyegain_area_entered"]
[connection signal="area_entered" from="Nextworld" to="." method="_on_nextworld_area_entered"]
